# fastformat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pip_release.yml  release.yml
apis/python/: Cargo.toml  pyproject.toml
apis/python/fastformat/: __init__.py
apis/python/fastformat/converter/arrow/: __init__.py  arrow.py  arrow.pyi
apis/python/fastformat/datatypes/: __init__.py  __init__.pyi  bbox.py  bbox.pyi  image.py  image.pyi
apis/python/pyfastformat/: __init__.py  __init__.pyi
apis/python/pyfastformat/converter/arrow/: __init__.py  __init__.pyi
apis/python/src/: datatypes.rs  lib.rs
apis/python/src/datatypes/: bbox.rs  image.rs
apis/rust/: Cargo.toml
apis/rust/src/: lib.rs
examples/benchmark/: README.md  generate_figure.py
examples/benchmark/node/: Cargo.toml
examples/benchmark/node/src/: main.rs
examples/consume-arrow/: Cargo.toml
examples/consume-arrow/src/: main.rs
examples/python-datatypes/: Cargo.toml
examples/python-datatypes/src/: main.py
examples/python-view-arrow/: Cargo.toml
examples/python-view-arrow/src/: main.py  main.rs
examples/share-arrow/: Cargo.toml
examples/share-arrow/src/: main.rs
examples/view-arrow/: Cargo.toml
examples/view-arrow/src/: main.rs
libraries/converter/src/: arrow.rs
libraries/converter/src/arrow/: builder.rs  consumer.rs  viewer.rs
libraries/datatypes/: Cargo.toml
libraries/datatypes/src/: bbox.rs  image.rs
libraries/datatypes/src/bbox/: arrow.rs  xywh.rs  xyxy.rs
libraries/datatypes/src/image/: arrow.rs  bgr8.rs  data.rs  gray8.rs  rgb8.rs
