[package]
name = "fastformat-python"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pyfastformat"
crate-type = ["cdylib", "lib"]

[dependencies]
fastformat = { workspace = true }
arrow = { workspace = true }
pyo3 = { workspace = true }
eyre = { workspace = true }
