[package]
name = "fastformat-python"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fastformat"
crate-type = ["cdylib", "lib"]

[dependencies]
fastformat-rs = { workspace = true }
eyre = { workspace = true }

arrow = { workspace = true, features = ["pyarrow"] }

pyo3 = { version = "0.21", features = [
    "extension-module",
    "eyre",
    "multiple-pymethods",
] }

numpy = "0.21"
