[package]
name = "fastformat"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastformat-converter = { workspace = true }
fastformat-datatypes = { workspace = true }
fastformat-derive = { workspace = true }

arrow = { workspace = true }
